k8s/deploy-frontend.yml
# The polls service provides a load-balancing proxy over the polls app
# pods. By specifying the type as a 'LoadBalancer', Container Engine will
# create an external HTTP load balancer.
# For more information about Services see:
#   https://cloud.google.com/container-engine/docs/services/
# For more information about external HTTP load balancing see:
#   https://cloud.google.com/container-engine/docs/load-balancer

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
      - name: users-service
        # Replace with your project ID or use `make template`
        image: 'eu.gcr.io/cloudarchitecture-ca674/users-service:latest'
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

      # Change <INSTANCE_CONNECTION_NAME> here to include your GCP
      # project, the region of your Cloud SQL instance and the name
      # of your Cloud SQL instance. The format is
      # $PROJECT:$REGION:$INSTANCE
      # [START proxy_container]
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: 
          - /cloud_sql_proxy
          - -dir=/cloudsql
          - -instances=cloudarchitecture-ca674:europe-west1:userdb=tcp:5432
          - -credential_file=/credentials/credentials.json
        ports:
            - name: postgres
              containerPort: 5432
        volumeMounts:
        - mountPath: /cloudsql
          name: cloudsql
        - mountPath: /credentials
          name: cloudsql-instance-credentials

      volumes:
        - name: cloudsql
          emptyDir:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql-db-credentials
          secret:
            secretName: cloudsql-db-credentials
